ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/Crop_Master__c.object-meta.xml
<CustomObject>
    <label>Crop Master</label>
    <nameField>
        <label>Crop Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crop Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>