ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Cultivation_Cost_Rs_Per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Cost_Rs_Per_Acre__c</fullName>
    <label>Cultivation Cost Rs Per Acre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>