ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Data_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Data_As_Of__c</fullName>
    <label>Data As Of</label>
    <length>10</length>
    <type>Text</type>
</CustomField>