ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>