ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Harvest_Month__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Month__c</fullName>
    <label>Harvest Month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>