ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/KCC_Flag__c.field-meta.xml
<CustomField>
    <fullName>KCC_Flag__c</fullName>
    <label>KCC Flag</label>
    <length>30</length>
    <type>Text</type>
</CustomField>