ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Market_Price_Rs_Per_Quintal__c.field-meta.xml
<CustomField>
    <fullName>Market_Price_Rs_Per_Quintal__c</fullName>
    <label>Market Price Rs Per Quintal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>