ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Net_Income_Per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Net_Income_Per_Acre__c</fullName>
    <label>Net Income Per Acre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>