ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Sold_Price__c.field-meta.xml
<CustomField>
    <fullName>Sold_Price__c</fullName>
    <label>Sold Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>