ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Sowing_Month__c.field-meta.xml
<CustomField>
    <fullName>Sowing_Month__c</fullName>
    <label>Sowing Month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>