ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Yield_Acre__c.field-meta.xml
<CustomField>
    <fullName>Yield_Acre__c</fullName>
    <label>Yield/Acre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>