ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Master__c/fields/Yield_Quintal_Per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Yield_Quintal_Per_Acre__c</fullName>
    <label>Yield Quintal Per Acre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>